--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h2>This is Ion and Welcome to ION V2.0</h2>
+					<h2>This is Ion and Welcome to ION V3.0 from Docker Automated Build</h2>
 					<p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
 					<ul class="actions">
 						<li><a href="#content" class="button big special">Sign Up</a></li>
